--- a/platform-api/src/main/resources/application.properties
+++ b/platform-api/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.enabled=true
 
 server.port=8080
+
+# JWT defaults (override via env/profiles)
+app.jwt.secret=change-this-in-prod-please
+app.jwt.issuer=platform-api
+app.jwt.expiration-seconds=3600
